--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
+    "react-native": "^0.65.1",
+    "react-native-web": "^0.17.1",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
   },
